<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/colorPrimary"
            android:titleTextColor="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <!-- Welcome text -->
        <TextView
            android:id="@+id/tv_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="24dp" />

        <!-- LEARNING MODE button -->
        <Button
            android:id="@+id/btn_learning_mode"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/learning_mode"
            android:textSize="20sp"
            android:layout_margin="16dp" />

        <!-- EMERGENCY MODE button -->
        <Button
            android:id="@+id/btn_emergency_mode"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/emergency_mode"
            android:textSize="20sp"
            android:layout_margin="16dp" />
    </LinearLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
